@@ -1,3 +1,7 @@
+  * Fix issue #278, Single stepping through disassembly without debug
+    symbols does not move arrow in source window. Now the arrow moves in
+    the source window as expected.
+
   * Fix issue #135 CGDB freezes when pressing "o" to open the file dialog
     Previously, if you attempted to open the file dialog, cgdb would 
     sometimes hang, due to a gdbwire parsing bug from the gdb response.
